FIX – word homonym name wrapping rules for mobile; Toolitip display issues on mobile

--- a/wordweb-app/src/main/resources/view/css/styles.css
+++ b/wordweb-app/src/main/resources/view/css/styles.css
@@ -16576,7 +16576,6 @@ body.hidden-scroll {
   transition: 0ms !important;
 }
 
-.homonym-name,
 .homonym-matches,
 .homonym-intro {
   line-height: 1.4;
@@ -16884,7 +16883,6 @@ body.hidden-scroll {
   .homonym-item-wrap {
     max-width: 100%;
   }
-  .homonym-name,
   .homonym-matches,
   .homonym-intro {
     max-width: 100%;
